[gd_scene load_steps=7 format=2]

[ext_resource path="res://CompleteScripts/player.gd" type="Script" id=1]
[ext_resource path="res://Images/—Pngtree—simple ninja game character_5066169.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 63.0317

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4.5, 4 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 781.75, 623 )

[sub_resource type="CapsuleShape2D" id=4]
radius = 7.0
height = 4.0

[node name="Player" type="KinematicBody2D"]
position = Vector2( -26, -21 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -1.19209e-07, -2.38419e-07 )
scale = Vector2( 0.0125, 0.0125 )
texture = ExtResource( 2 )

[node name="EnemyDetection" type="Area2D" parent="."]
visible = false
position = Vector2( 3.05176e-05, 1.52588e-05 )

[node name="Shape" type="CollisionShape2D" parent="EnemyDetection"]
visible = false
position = Vector2( -3.05176e-05, -1.52588e-05 )
shape = SubResource( 1 )

[node name="Effect" type="Tween" parent="."]

[node name="Hurtbox" type="Area2D" parent="."]
visible = false
collision_layer = 2
collision_mask = 0

[node name="Shape" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( -1.5, 0 )
shape = SubResource( 2 )

[node name="WaterDetection" type="Area2D" parent="."]
position = Vector2( -510, -300 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="WaterDetection"]
position = Vector2( 511, 400 )
shape = SubResource( 5 )

[node name="Hitbox" type="Area2D" parent="."]
visible = false
collision_mask = 0

[node name="Hitbox" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 4 )

[node name="Hitbox2" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="NestDetection" type="Area2D" parent="."]
position = Vector2( -886, -631 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="NestDetection"]
position = Vector2( 887.75, 631.5 )
shape = SubResource( 5 )

[connection signal="body_entered" from="WaterDetection" to="." method="_on_WaterDetection_body_entered"]
[connection signal="body_exited" from="WaterDetection" to="." method="_on_WaterDetection_body_exited"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="body_entered" from="NestDetection" to="." method="_on_NestDetection_body_entered"]
[connection signal="body_exited" from="NestDetection" to="." method="_on_NestDetection_body_exited"]
